--- a/app/src/main/res/layout/card_video_post.xml
+++ b/app/src/main/res/layout/card_video_post.xml
@@ -16,7 +16,8 @@
             <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                 android:id="@+id/video_post_view"
                 android:layout_width="match_parent"
-                android:layout_height="200dp">
+                android:layout_height="200dp"
+                fresco:surface_type="texture_view">
 
             </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
 
